tdf#138326 impress template thumbnails are blurred

regression from
    commit 548d77d0c06f7088dd3eb408797aa1fc1d7eb277
    Author: Noel <noelgrandin@gmail.com>
    Date:   Fri Nov 13 10:23:36 2020 +0200
    tools::Long->sal_uInt16 in ImpErrorQuad

Change-Id: I29403afcb7d88dee27f1565793ffbd7ad4c53a17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106545
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit caf72d1f20547a94e29c0943eb94fa52aec430a4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106524